--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,8 @@ services:
     restart: unless-stopped
     ports:
       - 8081:8080
+    volumes:
+      - ./docker/adminer/:/var/www/html/plugins-enabled/
     depends_on:
       - db
     networks:
